--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "apollo-server-express": "^3.8.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "stripe": "^9.5.0"
+    "react-bootstrap": "^2.4.0",
+    "stripe": "^9.5.0",
+    "styled-components": "^5.3.5"
   }
 }
